--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@actions/core": "^1.2.6",
     "@octokit/action": "^3.1.6",
+    "https-proxy-agent": "^5.0.0",
     "js-yaml": "^4.0.0"
   },
   "devDependencies": {
